es/15.4/config/index.rst
Guía de Configuración de |Fess|
================================

Guía integral sobre la configuración de |Fess|. Cada sección está organizada por propósito.

.. toctree::
   :maxdepth: 2
   :caption: Introducción

   intro

.. toctree::
   :maxdepth: 2
   :caption: Configuración Básica

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Configuración del Rastreador

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Configuración de Funciones de Búsqueda

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: Configuración de Seguridad

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: Configuración SSO

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: Administración del Sistema

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
