es/15.5/config/index.rst
Guia de Configuracion de |Fess|
================================

Guia integral sobre la configuracion de |Fess|. Cada seccion esta organizada por proposito.

.. toctree::
   :maxdepth: 2
   :caption: Introduccion

   intro

.. toctree::
   :maxdepth: 2
   :caption: Configuracion Basica

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: Configuracion del Rastreador

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: Conectores de Data Store

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: Configuracion de Funciones de Busqueda

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion

.. toctree::
   :maxdepth: 2
   :caption: Configuracion de Seguridad

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: Configuracion SSO

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: Configuracion LLM/Chat IA

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: Scripting

   scripting-overview
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: Rendimiento y Operacion

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: Administracion del Sistema

   admin-logging
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
